feat: Add entry point script and update module imports
Includes the main application script in index.html and updates various component/service imports to use the `.tsx` extension for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -133,5 +133,7 @@
     <div class="animated-blob bg-indigo-200" style="top: -10%; left: -10%;"></div>
     <div class="animated-blob bg-purple-200" style="bottom: -10%; right: -10%; animation-delay: -5s;"></div>
     <div id="root"></div>
+    <!-- Load the application entry point -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
